<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bankinterLightGray">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="385dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        app:srcCompat="@drawable/bankinter" />

    <TextView
        android:id="@+id/textIntro"
        android:layout_width="343dp"
        android:layout_height="85dp"
        android:text="@string/Intro"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textSalario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/salario_anual"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textIntro"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/TextNumberSalario"
        android:layout_width="347dp"
        android:layout_height="29dp"
        android:background="@color/bankinterLightGray"
        android:hint="@string/_25000"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textSalario"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textPagas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/introduzca_el_num_de_pagas"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/TextNumberSalario"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/textNumberPagas"
        android:layout_width="344dp"
        android:layout_height="33dp"
        android:background="@color/bankinterLightGray"
        android:hint="@string/_12"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textPagas"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textEdad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/introduzca_su_edad"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textNumberPagas"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/textNumberEdad"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:background="@color/bankinterLightGray"
        android:hint="@string/_25"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textEdad"
        app:layout_constraintVertical_bias="0.028" />

    <TextView
        android:id="@+id/textGrupoProfesional"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/introduzca_su_grupo_profesional"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textNumberEdad"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/editTextGrupoProfesional"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:background="@color/bankinterLightGray"
        android:hint="@string/administrativo"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textGrupoProfesional"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textGradoDiscapacidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/indique_su_grado_de_discapacidad"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editTextGrupoProfesional"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/editDiscapacidad"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:background="@color/bankinterLightGray"
        android:hint="@string/_33"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textGradoDiscapacidad"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/introduzca_su_estado_civil"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editDiscapacidad"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/estadoCivil"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:background="@color/bankinterLightGray"
        android:hint="@string/soltero"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textEstado"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/textHijos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/introduzca_el_n_mero_de_hijos"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/estadoCivil"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/textHijo"
        android:layout_width="346dp"
        android:layout_height="30dp"
        android:background="@color/bankinterLightGray"
        android:hint="@string/_2"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textHijos"
        app:layout_constraintVertical_bias="0.022" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:background="@color/bankinterDarkGray"
        android:text="@string/calcular"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHijo"
        android:elevation="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>